--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -6,4 +6,21 @@
 
 {% block content %}
 Welcome to my Twitter-Clone
+
+<script>
+    const xhr = new XMLHttpRequest()
+    const method = "GET" // "POST"
+    const url = "/tweets"
+    const responseType = "json"
+
+    xhr.responseType = responseType
+    xhr.open(method, url)
+    xhr.onload = function(){
+        const serverResponse = xhr.response
+        var listedItems = serverResponse.response
+        console.log(listedItems)
+    }
+    xhr.send()
+</script>
+
 {% endblock content %}
