Basic Like Button Response

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -20,8 +20,19 @@ Welcome to my Twitter-Clone
     const url = "/tweets"
     const responseType = "json"
 
+    function likeButton(tweet){
+        return "<button class='btn btn-primary'  onclick=handleDidLike(" + tweet.id  + "," + tweet.likes + ")>" + tweet.likes + " Likes</button>"
+    }
+
+    function handleDidLike(tweet_id, currentCount){
+        console.log(tweet_id, currentCount)
+    }
+
     function formatTweetElement(tweet){
-        var formattedTweet = "<div class='mb-4 tweet' id=tweet-'" + tweet.id + "'><p>" + tweet.content + "</p></div>"
+        var formattedTweet = "<div class='mb-4 tweet' id=tweet-'" + tweet.id + "'><p>" + 
+            tweet.content + "</p>" +
+            "<div class='btn-group'>" + likeButton(tweet) + "</div></div>"
+        
         return formattedTweet
     }
 
