--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -5,9 +5,13 @@
 {% endblock head_title %}
 
 {% block content %}
-Welcome to my Twitter-Clone
+<div class = 'row text-center'>
+    <div class = 'col'>
+        <h1>Welcome to my Twitter-Clone</h1>
+    </div>
+</div>
 
-<div id='tweets'>
+<div class = 'row' id='tweets'>
     Loading...
 </div>
 
@@ -21,7 +25,7 @@ Welcome to my Twitter-Clone
     const responseType = "json"
 
     function likeButton(tweet){
-        return "<button class='btn btn-primary'  onclick=handleDidLike(" + tweet.id  + "," + tweet.likes + ")>" + tweet.likes + " Likes</button>"
+        return "<button class='btn btn-primary bg-twitter-clone'  onclick=handleDidLike(" + tweet.id  + "," + tweet.likes + ")>" + tweet.likes + " Likes</button>"
     }
 
     function handleDidLike(tweet_id, currentCount){
@@ -29,7 +33,7 @@ Welcome to my Twitter-Clone
     }
 
     function formatTweetElement(tweet){
-        var formattedTweet = "<div class='mb-4 tweet' id=tweet-'" + tweet.id + "'><p>" + 
+        var formattedTweet = "<div class='col-12 col-md-10 mx-auto border rounded py-3 mb-4 tweet' id=tweet-'" + tweet.id + "'><p>" + 
             tweet.content + "</p>" +
             "<div class='btn-group'>" + likeButton(tweet) + "</div></div>"
         
