--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -15,6 +15,7 @@
     <div class="col-md-4 mx-auto col-10">
         <form class="form" id="create_tweet_form" method="POST" action="/create-tweet">
             {% csrf_token %}
+            <div class='d-none alert alert-danger' id='tweet-create-form-error'></div>
             <input type="hidden" name="next" value="/">
             <textarea required="required" name="content" class="form-control" placeholder="Your Tweet.."></textarea>
             <button class="btn btn-primary bg-twitter-clone" type="submit">Tweet</button>
@@ -27,6 +28,19 @@
 </div>
 
 <script>
+
+    function handleTweetFormError(msg, display){
+        var myErrorDiv = document.getElementById("tweet-create-form-error")
+        if(display === true){
+            //show error
+            myErrorDiv.setAttribute("class", "d-block alert alert-danger")
+            myErrorDiv.innerText = msg
+        }
+        else{
+            //hide error
+            myErrorDiv.setAttribute("class", "d-none alert alert-danger")
+        }
+    }
 
     function handleCreateTweetFormSubmit(event){
         event.preventDefault()
@@ -42,6 +56,7 @@
         xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
         xhr.onload = function(){
             if(xhr.status === 201){
+                handleTweetFormError("", false)
                 const newTweetJSON = xhr.response
                 const newTweetElement = formatTweetElement(newTweetJSON)
                 ogHTML = tweets_container_element.innerHTML
@@ -50,7 +65,20 @@
             }
             else if(xhr.status === 400){
                 const errorJson = xhr.response
-                console.log(errorJson)
+                const contentError = errorJson.content
+                let contentErrorMsg;
+                if (contentError){
+                    contentErrorMsg = contentError[0]
+                    if(contentErrorMsg){
+                        handleTweetFormError(contentErrorMsg, true)
+                    }
+                    else{
+                        alert("An error has occured. Please try again.")
+                    }
+                }
+                else{
+                    alert("An error has occured. Please try again.")
+                }
             }
             else if(xhr.status === 500){
                 alert("A server error has occured. Please try again later.")
