Introduce Django REST framework

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -80,6 +80,14 @@
                     alert("An error has occured. Please try again.")
                 }
             }
+            else if(xhr.status === 401){
+                alert("You must login")
+                window.location.href = "/login"
+            }
+            else if(xhr.status === 403){
+                alert("You must login")
+                window.location.href = "/login"
+            }
             else if(xhr.status === 500){
                 alert("A server error has occured. Please try again later.")
             }
@@ -104,7 +112,7 @@
         xhr.open(method, url)
         xhr.onload = function(){
             const serverResponse = xhr.response
-            var listedItems = serverResponse.response
+            var listedItems = serverResponse
             var finalTweetStr = ""
             var i;
             for (i=0; i<listedItems.length; i++){
