--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -29,6 +29,23 @@
 
 <script>
 
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+
     function handleTweetFormError(msg, display){
         var myErrorDiv = document.getElementById("tweet-create-form-error")
         if(display === true){
@@ -128,17 +145,45 @@
     loadTweets(tweets_container_element)
 
     function likeButton(tweet){
-        return "<button class='btn btn-primary bg-twitter-clone'  onclick=handleDidLike(" + tweet.id  + "," + tweet.likes + ")>" + tweet.likes + " Likes</button>"
+        return "<button class='btn btn-primary bg-twitter-clone'  onclick=handleTweetActionButton(" + tweet.id  + "," + tweet.likes + ",'like')>" + tweet.likes + " Likes</button>"
     }
 
-    function handleDidLike(tweet_id, currentCount){
+    function unlikeButton(tweet){
+        return "<button class='btn btn-primary bg-twitter-clone'  onclick=handleTweetActionButton(" + tweet.id  + "," + tweet.likes + ",'unlike')>Unlike</button>"
+    }
+
+    function retweetButton(tweet){
+        return "<button class='btn btn-primary bg-twitter-clone'  onclick=handleTweetActionButton(" + tweet.id  + "," + tweet.likes + ",'retweet')>Retweet</button>"
+    }
+
+    function handleTweetActionButton(tweet_id, currentCount, action){
+        const csrftoken = getCookie('csrftoken');
         console.log(tweet_id, currentCount)
+        const url = "/api/tweets/action"
+        const method = "POST"
+        const data = JSON.stringify({
+            id: tweet_id,
+            action: action
+        })
+        const xhr = new XMLHttpRequest()
+        xhr.open(method, url)
+        xhr.setRequestHeader("Content-Type", "application/json")
+        xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
+        xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+        xhr.setRequestHeader("X-CSRFToken", csrftoken)
+        xhr.onload = function() {
+            loadTweets(tweets_container_element)
+        }
+        console.log(data)
+        xhr.send(data)
+
+        return
     }
 
     function formatTweetElement(tweet){
         var formattedTweet = "<div class='col-12 col-md-10 mx-auto border rounded py-3 mb-4 tweet' id=tweet-'" + tweet.id + "'><p>" + 
             tweet.content + "</p>" +
-            "<div class='btn-group'>" + likeButton(tweet) + "</div></div>"
+            "<div class='btn-group'>" + likeButton(tweet) + unlikeButton(tweet) + retweetButton(tweet) + "</div></div>"
         
         return formattedTweet
     }
